QMap: add operator+ and - for iterators

We missed the chance of deprecating them in 5.15, so
they'll just add to the pain of porting to 6.0. We
should not keep them around forever, though; QMap isn't
random access and so its iterators should only have
bidirectional APIs.

Fixes: QTBUG-95334
Change-Id: I3577f7d25e8ab793722d2f220fd27bc85c622b0d
Reviewed-by: Lars Knoll <lars.knoll@qt.io>
(cherry picked from commit cc584c59de644195ae0c4f7f99ad428e189df07d)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>